manifests/validating_webhook_controller.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "Digital_Ocean_Clusters.anutosh491.dev"
webhooks:
- name: "Digital_Ocean_Clusters.anutosh491.dev"
  rules:
  - apiGroups:   ["anutosh491.dev"]
    apiVersions: ["v1alpha1"]
    operations:  ["CREATE"]
    resources:   ["Digital_Ocean_Clusters"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: "default"
      name: "valkon"
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZPakNDQXlLZ0F3SUJBZ0lVWUg0WVBaT3VQY3VaQWlNN3JyYjJzVWVOUUpnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0hURWJNQmtHQTFVRUF3d1NkbUZzYTI5dUxtUmxabUYxYkhRdWMzWmpNQjRYRFRJeU1ERXdPVEU0TlRneQpNbG9YRFRJek1ERXdPVEU0TlRneU1sb3dIVEViTUJrR0ExVUVBd3dTZG1Gc2EyOXVMbVJsWm1GMWJIUXVjM1pqCk1JSUNJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBZzhBTUlJQ0NnS0NBZ0VBd2t4UXYwbW1kNFY4UkRCRU9oNVUKQjN2NTgxVU1Qamc5a2U1L0J0RFl2Wms3cGZkQUkvdzVKUlY3YVVQUGFQWkd2eVV6eGwzR2lES1d4bnZDdC9YWApxMjhzUnE1UUxYT [...]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
